# intera_common

./: .gitignore  CHANGELOG.rst  README.rst
doc/: Doxyfile  mainpage.md  post-hdoc  pre-hdoc
intera_common/: CMakeLists.txt  package.xml
intera_core_msgs/: CMakeLists.txt  package.xml
intera_core_msgs/action/: CalibrationCommand.action
intera_core_msgs/msg/: AssemblyState.msg  EndEffectorProperties.msg  EndpointNamesArray.msg  EndpointState.msg  EndpointStates.msg  HeadPanCommand.msg  HeadState.msg  HomingCommand.msg  HomingState.msg  IOComponentConfiguration.msg  IOComponentStatus.msg  IODeviceConfiguration.msg  IODeviceStatus.msg  IONodeConfiguration.msg  IONodeStatus.msg  IOStatus.msg  InteractionControlCommand.msg  InteractionControlState.msg  JointCommand.msg  JointLimits.msg  RobotAssemblyState.msg  RobotState.msg  RobotStates.msg  SEAJointState.msg  TaskState.msg
intera_core_msgs/srv/: IOComponentCommandSrv.srv  SolvePositionFK.srv  SolvePositionIK.srv
intera_io_msgs/: CMakeLists.txt  package.xml
intera_io_msgs/msg/: IOComponentCommand.msg  IODataStatus.msg  IODeviceConfiguration.msg  IONodeConfiguration.msg
intera_io_msgs/srv/: IOComponentCommandSrv.srv
intera_motion_msgs/: CMakeLists.txt  package.xml
intera_motion_msgs/action/: MotionCommand.action
intera_motion_msgs/msg/: EndpointTrackingError.msg  InterpolatedPath.msg  JointTrackingError.msg  MotionStatus.msg  TrackingOptions.msg  Trajectory.msg  TrajectoryAnalysis.msg  TrajectoryOptions.msg  Waypoint.msg  WaypointOptions.msg  WaypointSimple.msg
intera_tools_description/: CMakeLists.txt  package.xml
intera_tools_description/meshes/connector_plate/: connector_plate.DAE
intera_tools_description/urdf/connector_plate/: connector_plate.xacro
intera_tools_description/urdf/electric_gripper/: example_end_effector.urdf.xacro  rethink_electric_gripper.xacro
intera_tools_description/urdf/electric_gripper/fingers/: basic_hard_tip.xacro  basic_soft_tip.xacro  extended_narrow.xacro  extended_wide.xacro  half_round_tip.xacro  paddle_tip.xacro  standard_narrow.xacro  standard_wide.xacro
motion_msgs/: CMakeLists.txt  package.xml
motion_msgs/action/: MotionCommand.action
motion_msgs/msg/: MotionStatus.msg  TrackingError.msg  TrackingOptions.msg  Trajectory.msg  TrajectoryOptions.msg  Waypoint.msg  WaypointOptions.msg
motor_control_msgs/: CMakeLists.txt  README.md  package.xml
motor_control_msgs/msg/: ApproachAlert.msg  ApproachCtrl.msg  ApproachMapMsg.msg  ArmStateEstimate.msg  CameraStrobe.msg  CollisionDetection.msg  DebugServoLoopStateDetail.msg  DebugVelocityController.msg  GripperConfiguration.msg  IKSearchStrategy.msg  InteractionControlDebug.msg  JointCollisionEstimatorDebug.msg  JointMotionCommand.msg  JointPathReply.msg  JointPathRequest.msg  JointPlanReply.msg  JointPlanRequest.msg  JointPosition.msg  JointTrajectory.msg  JointTrajectoryPoint.msg  LimbState.msg  NullspaceTwistStamped.msg  ObjectMass.msg  OptionalBool.msg  OptionalFloat.msg  PoseMetrics.msg  SeededIKPose.msg  StateManagerData.msg  TaskState.msg  TorqueData.msg  URDFSegment.msg  VelocityControllerState.msg  WeightIntegralTerm.msg  WeightIntegralTerms.msg
msg/: 1  ControllerType.msg  InteractionControlData.msg  InteractionControlOutput.msg  InterpolationType.msg  JointLimits.msg  NamedTrajectoryParameterizationType.msg  TrajectoryParameterizationType.msg
