<?xml version="1.0"?>
<package>
  <name>intera_motion_msgs</name>
  <version>5.3.0</version>
  <description>
    Intera Motion messages
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
  <url type="repository">
    https://github.com/RethinkRobotics/intera_common
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/intera_common/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- package contains messages -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
