<package format="2">
  <name>motor_control_msgs</name>
  <version>5.0.1</version>
  <description>
  Motor Control and hardware interface messages
  </description>
  
  <maintainer email="dcookson@rethinkrobotics.com">Dan Cookson</maintainer>
  <license>Rethink</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- package contains messages -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
</package>
