<package format="2">
  <name>motor_control_msgs</name>
  <version>5.4.0</version>
  <description>
  Motor Control and hardware interface messages
  </description>
  
  <maintainer email="dcookson@rethinkrobotics.com">Dan Cookson</maintainer>
  <license>Rethink</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rethink_build_support</build_depend>
  
  <!-- package contains messages -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
</package>
